fixed last title image overflow

--- a/src/components/EdiXualCreationsPageInfoDisplay.css
+++ b/src/components/EdiXualCreationsPageInfoDisplay.css
@@ -8,7 +8,7 @@
 }
 
 .infocard:last-child {
-  margin: 30vh 0 20vh 0;
+  margin: 30vh 0 30vh 0;
 }
 
 .infocard-text {
